--- a/high_wave/manifest.json
+++ b/high_wave/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "liss22",
+  "short_name": "liss22",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
-    "src": "assets/imgs/logo.png",
-    "sizes": "512x512",
+    "src": "assets/imgs/cone_logo.png",
+    "sizes": "200x200",
     "type": "image/png"
   }],
-  "background_color": "#4e8ef7",
-  "theme_color": "#4e8ef7"
+  "background_color": "#44a6fa",
+  "theme_color": "#44a6fa"
 }
