이름 테스트

--- a/high_wave/manifest.json
+++ b/high_wave/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "liss22",
-  "short_name": "liss22",
+  "name": "high_wave",
+  "short_name": "high_wave",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
